# Oktopus

./: .dockerignore  Changelog  Dockerfile  LICENSE  README.md
admin/: index.html  package.json  tailwind.config.js
admin/src/: main.ts
admin/src/pages/: index.ts
admin/src/pages/pages/: Account.svelte  Dashboard.svelte
chain/: Cargo.toml
chain/src/admin_api/: Cargo.toml
chain/src/manager/backend/: Cargo.toml
chain/src/manager/backend/src/: main.rs
chain/src/manager/frontend/: package.json
chain/src/manager/frontend/src/: App.svelte
chain/src/node/: Cargo.toml
chain/src/node/src/: handler.rs  main.rs
chain/src/structure/: Cargo.toml
chain/src/structure/src/: block.rs  error.rs  lib.rs  txn.rs
chain/src/utils/: Cargo.toml
chain/src/utils/src/: ascii_art.rs  bignum.rs  lib.rs
chain/src/wallet/: Cargo.toml
docs-web/: package.json
