[package]
name = "admin_api"
version = "0.1.0"
edition = "2021"

[dependencies]
tokio = { workspace = true }
serde = { workspace = true }
serde_json = { workspace = true }
axum = "0.7.5"
tower = "0.4.13"
tower-http = "0.5.2"
sqlx = { version = "0.7.4", features = ["runtime-tokio"] }
structure = { path = "../../structure" }
futures = "0.3.30"
futures-util = "0.3.30"
jwt = "0.16.0"
bcrypt = "0.15.1"
tracing-subscriber = { workspace = true }
