[package]
name = "node"
description = ""
version = "0.1.0"
default-run = "node"
edition = "2021"

[dependencies]
tokio = { workspace = true }
tokio-tungstenite = { workspace = true }
rayon = { workspace = true }
thiserror = { workspace = true }
anyhow = { workspace = true }
tracing = "0.1.40"
tracing-subscriber = "0.3.18"

structure = { path = "../structure" }
