[package]
name = "node"
description = ""
version = "0.1.0"
default-run = "node"
edition = "2021"

[dependencies]
tokio = { workspace = true }
tokio-tungstenite = { workspace = true }
rayon = { workspace = true }
thiserror = { workspace = true }
anyhow = { workspace = true }
tracing = { workspace = true }
tracing-subscriber = { workspace = true }
futures-channel = "0.3.30"
futures-util = "0.3.30"

structure = { path = "../structure" }
utils = { path = "../utils" }

